🎯 Fixed Homepage Layout to Match Reference Site
✅ HERO SECTION UPDATED:
- Removed second button from hero section
- Now shows only 'Book a Free Consultation' button centered
- Matches reference site layout exactly

✅ CORAL BUTTON STYLING:
- Added .btn-coral class with original coral color (#DD8B66)
- Updated all 'Learn More' buttons to coral color
- Matches the warm, friendly coral tone from reference site
- Proper hover effects with darker coral (#C67A5A)

✅ BUTTON TEXT SIMPLIFIED:
- Changed descriptive button text back to simple 'Learn More →'
- Maintains clean, consistent design like reference
- Better visual hierarchy and readability

✅ CONSISTENT BRANDING:
- All secondary buttons now use coral color
- Maintains brand consistency throughout site
- Professional appearance matching reference design

Homepage now perfectly matches the reference site layout and styling!

--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
             <p class="hero-subtitle">Choice Insurance provides personalized plans and expert guidance for residents of Illinois, Alabama, Georgia, Ohio, Kentucky, Mississippi, South Carolina, and Texas.</p>
             <div class="hero-buttons">
                 <a href="#consultation" class="btn btn-primary btn-lg">Book a Free Consultation</a>
-                <a href="#" class="btn btn-secondary btn-lg plan-enroll" data-plan="medicare">Start Enrollment</a>
             </div>
         </div>
     </section>
@@ -189,7 +188,7 @@
             <div class="section-header">
                 <h2>About Choice Insurance Agency</h2>
                 <p>Choice Insurance is an independent insurance agency specializing in Medicare Benefits, Individual Health Insurance, Employee Benefits, and Life Insurance plans. We partner with major insurance carriers to provide clients with a wide range of coverage options. Our plans are designed with a focus on affordability and tailored benefits, combined with personalized guidance to help clients make well-informed decisions.</p>
-                <a href="#contact" class="btn btn-primary">Schedule Your Free Insurance Consultation</a>
+                <a href="#contact" class="btn btn-coral">Learn More About Choice Insurance</a>
             </div>
         </div>
     </section>
@@ -205,7 +204,7 @@
                     <h3>Medicare Supplement</h3>
                     <p>Explore options for Medicare Supplement (Medigap) plans with Choice Insurance experts.</p>
                     <div class="service-actions">
-                        <a href="services.html#medicare-supplement" class="btn btn-secondary">Learn About Medicare Supplement Plans →</a>
+                        <a href="services.html#medicare-supplement" class="btn btn-coral">Learn More →</a>
                         <a href="#" class="btn btn-outline plan-enroll" data-plan="medicare-supplement">Enroll in Medicare Supplement</a>
                     </div>
                 </div>
@@ -213,7 +212,7 @@
                     <h3>Life Insurance</h3>
                     <p>Secure your family's future with various life insurance policies from Choice Insurance.</p>
                     <div class="service-actions">
-                        <a href="services.html#life-insurance" class="btn btn-secondary">Explore Life Insurance Options →</a>
+                        <a href="services.html#life-insurance" class="btn btn-coral">Learn More →</a>
                         <a href="#" class="btn btn-outline plan-enroll" data-plan="life-insurance">Get Life Insurance Quote</a>
                     </div>
                 </div>
@@ -221,7 +220,7 @@
                     <h3>Health Insurance</h3>
                     <p>Find individual and group health insurance plans through Choice Insurance Agency.</p>
                     <div class="service-actions">
-                        <a href="services.html#health-insurance" class="btn btn-secondary">Compare Health Insurance Plans →</a>
+                        <a href="services.html#health-insurance" class="btn btn-coral">Learn More →</a>
                         <a href="#" class="btn btn-outline plan-enroll" data-plan="health-insurance">Apply for Health Insurance</a>
                     </div>
                 </div>
@@ -229,7 +228,7 @@
                     <h3>Medicare Advantage</h3>
                     <p>Discover Medicare Advantage (Part C) options with guidance from Choice Insurance specialists.</p>
                     <div class="service-actions">
-                        <a href="services.html#medicare-advantage" class="btn btn-secondary">View Medicare Advantage Plans →</a>
+                        <a href="services.html#medicare-advantage" class="btn btn-coral">Learn More →</a>
                         <a href="#" class="btn btn-outline plan-enroll" data-plan="medicare-advantage">Enroll in Medicare Advantage</a>
                     </div>
                 </div>
@@ -237,7 +236,7 @@
                     <h3>Final Expense</h3>
                     <p>Plan ahead with final expense insurance solutions from Choice Insurance.</p>
                     <div class="service-actions">
-                        <a href="services.html#final-expense" class="btn btn-secondary">Learn About Final Expense Insurance →</a>
+                        <a href="services.html#final-expense" class="btn btn-coral">Learn More →</a>
                         <a href="#" class="btn btn-outline plan-enroll" data-plan="final-expense">Get Final Expense Quote</a>
                     </div>
                 </div>
@@ -245,7 +244,7 @@
                     <h3>Cancer & Critical Illness</h3>
                     <p>Get protection and help manage costs associated with critical illnesses through Choice Insurance.</p>
                     <div class="service-actions">
-                        <a href="services.html#cancer-critical-illness" class="btn btn-secondary">Explore Critical Illness Coverage →</a>
+                        <a href="services.html#cancer-critical-illness" class="btn btn-coral">Learn More →</a>
                         <a href="#" class="btn btn-outline plan-enroll" data-plan="cancer-critical-illness">Apply for Critical Illness Insurance</a>
                     </div>
                 </div>
@@ -253,7 +252,7 @@
                     <h3>Annuities</h3>
                     <p>Secure your retirement with reliable income streams through annuities from Choice Insurance.</p>
                     <div class="service-actions">
-                        <a href="services.html#annuities" class="btn btn-secondary">Discover Annuity Options →</a>
+                        <a href="services.html#annuities" class="btn btn-coral">Learn More →</a>
                         <a href="#" class="btn btn-outline plan-enroll" data-plan="annuities">Start Annuity Planning</a>
                     </div>
                 </div>
@@ -304,7 +303,7 @@
                 </blockquote>
             </div>
             <div class="testimonials-cta">
-                <a href="#contact" class="btn btn-primary">Read More Choice Insurance Testimonials</a>
+                <a href="#contact" class="btn btn-coral">Read More Choice Insurance Testimonials</a>
             </div>
         </div>
     </section>
@@ -315,7 +314,7 @@
             <div class="cta-content">
                 <h2>Ready to Find Your Perfect Choice Insurance Plan?</h2>
                 <p>Let Choice Insurance help you navigate the complexities of insurance. Contact us today for a free, no-obligation consultation.</p>
-                <a href="#contact" class="btn btn-primary btn-lg">Get a Free Quote Today</a>
+                <a href="#contact" class="btn btn-coral btn-lg">Get a Free Quote Today</a>
             </div>
         </div>
     </section>
