🔗 Updated Quote Now Buttons with PlanEnroll URL
✅ QUOTE NOW INTEGRATION:
- Updated all 'Quote Now' buttons across all pages
- Now links to: https://www.planenroll.com/?purl=kOW7ufSy
- Opens in new tab (target='_blank') for better UX
- Updated GTM tracking to 'quote_now_planenroll' for analytics

✅ PAGES UPDATED:
- index.html (homepage navigation)
- about.html
- contact.html
- blog.html
- services.html
- testimonials.html
- faq.html

All Quote Now buttons now properly direct users to the PlanEnroll platform for insurance quotes and enrollment.

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
                 </ul>
                 
                 <div class="nav-buttons">
-                    <a href="#quote" class="btn btn-outline" onclick="gtag('event', 'click', {'event_category': 'cta', 'event_label': 'quote_nav'});">Quote Now</a>
+                    <a href="https://www.planenroll.com/?purl=kOW7ufSy" target="_blank" class="btn btn-outline" onclick="gtag('event', 'click', {'event_category': 'cta', 'event_label': 'quote_now_planenroll'});">Quote Now</a>
                     <a href="#consultation" class="btn btn-primary" onclick="gtag('event', 'click', {'event_category': 'cta', 'event_label': 'consultation_nav'});">Book a Free Consultation</a>
                 </div>
                 
