--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </ul>
                 
                 <div class="nav-cta">
-                    <a href="#" class="btn btn-outline plan-enroll" data-plan="quote">Quote Now</a>
+                    <a href="https://www.planenroll.com/?purl=kOW7ufSy" target="_blank" class="btn btn-outline" onclick="gtag('event', 'click', {'event_category': 'cta', 'event_label': 'quote_now_planenroll'});">Quote Now</a>
                     <a href="#consultation" class="btn btn-primary">Book a Free Consultation</a>
                 </div>              
                 <div class="nav-toggle" id="nav-toggle">
