🔧 FIXED CALENDLY 404 ERRORS
✅ CRITICAL FIXES:
- Removed broken Calendly integration causing 404 errors
- Replaced with simple contact section scrolling
- Fixed JavaScript syntax errors
- Updated all consultation buttons to scroll to contact
- Removed broken GTM function calls

✅ CALENDLY REMOVAL:
- Removed Calendly CSS and JS includes from HTML
- Removed all Calendly JavaScript functions
- Updated enrollment modal to use contact scrolling
- Fixed broken function syntax

All 404 errors from Calendly should now be resolved.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
     
-    <!-- Calendly Integration -->
-    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <!-- Removed Calendly Integration - Causing 404 errors -->
     
     <!-- Structured Data -->
     <script type="application/ld+json">
