Add dropdown navigation menu to match reference site
- Implemented Services dropdown with organized categories
- Added hover functionality and visual styling
- Color-coded service categories for better UX
- Matches deft-granita reference site exactly

--- a/index.html
+++ b/index.html
@@ -157,7 +157,61 @@
                 <ul class="nav-menu" id="nav-menu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Us</a></li>
-                    <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li class="nav-dropdown">
+                        <button class="nav-link dropdown-toggle">Services</button>
+                        <div class="dropdown-menu">
+                            <div class="dropdown-grid">
+                                <div class="dropdown-item">
+                                    <a href="services.html" class="dropdown-link all-services">
+                                        <h4>All Services</h4>
+                                        <p>Explore our comprehensive range of insurance solutions.</p>
+                                    </a>
+                                </div>
+                                <div class="dropdown-item">
+                                    <a href="services/medicare-supplement.html" class="dropdown-link">
+                                        <h4>Medicare Supplement Plans</h4>
+                                        <p>Explore options for Medicare Supplement (Medigap) plans.</p>
+                                    </a>
+                                </div>
+                                <div class="dropdown-item">
+                                    <a href="services/life-insurance.html" class="dropdown-link">
+                                        <h4>Life Insurance</h4>
+                                        <p>Secure your family's future with various life insurance policies.</p>
+                                    </a>
+                                </div>
+                                <div class="dropdown-item">
+                                    <a href="services/health-insurance.html" class="dropdown-link">
+                                        <h4>Cancer & Illness Plans</h4>
+                                        <p>Specialized plans for critical illnesses like cancer.</p>
+                                    </a>
+                                </div>
+                                <div class="dropdown-item">
+                                    <a href="services/medicare-advantage.html" class="dropdown-link">
+                                        <h4>Medicare Advantage Plan</h4>
+                                        <p>All-in-one alternatives to Original Medicare with additional benefits.</p>
+                                    </a>
+                                </div>
+                                <div class="dropdown-item">
+                                    <a href="services/final-expense.html" class="dropdown-link">
+                                        <h4>Final Expense Plans</h4>
+                                        <p>Cover end-of-life expenses and protect your loved ones.</p>
+                                    </a>
+                                </div>
+                                <div class="dropdown-item">
+                                    <a href="services/hospital-indemnity.html" class="dropdown-link">
+                                        <h4>Hospital Indemnity Plans</h4>
+                                        <p>Get coverage for hospital stays and related expenses.</p>
+                                    </a>
+                                </div>
+                                <div class="dropdown-item">
+                                    <a href="services/annuities.html" class="dropdown-link">
+                                        <h4>Annuities</h4>
+                                        <p>Plan for retirement with our annuity options.</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                     <li><a href="testimonials.html" class="nav-link">Testimonials</a></li>
                     <li><a href="faq.html" class="nav-link">FAQ</a></li>
                     <li><a href="contact.html" class="nav-link">Contact Us</a></li>
