Fix CSP and security header console errors
- Updated CSP to properly allow Google Tag Manager
- Added googletagmanager.com to script-src and connect-src
- Removed frame-ancestors from meta tag (moved to netlify.toml)
- Removed X-Frame-Options from meta tag (HTTP header only)
- Updated netlify.toml CSP to match meta CSP
- Fixes console errors for GTM loading

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <!-- Choice Insurance Security & SEO Optimizations -->
     <!-- Version: 20250606 - Complete optimization package with enhanced security -->
 
-    <!-- Content Security Policy (CSP) -->
+    <!-- Content Security Policy (CSP) - Fixed for GTM -->
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self';
         script-src 'self' 'unsafe-inline' 'unsafe-eval' 
             https://www.googletagmanager.com 
             https://www.google-analytics.com 
+            https://googletagmanager.com
             https://calendly.com 
             https://assets.calendly.com
             https://js.stripe.com
@@ -32,6 +33,7 @@
             https://assets.calendly.com;
         connect-src 'self' 
             https://www.google-analytics.com 
+            https://www.googletagmanager.com
             https://calendly.com 
             https://api.calendly.com
             https://api.stripe.com;
@@ -45,13 +47,11 @@
             https://calendly.com 
             https://formspree.io 
             https://netlify.com;
-        frame-ancestors 'none';
         upgrade-insecure-requests;
     ">
 
-    <!-- Enhanced Security Headers -->
+    <!-- Enhanced Security Headers (X-Frame-Options and frame-ancestors moved to netlify.toml) -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="DENY">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     <meta http-equiv="Permissions-Policy" content="
